<resources>
    <string name="app_name">Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_C">C</string>
    <string name="button_parantez">( )</string>
    <string name="button_mod">%</string>
    <string name="button_bolme">÷</string>
    <string name="button_carp">x</string>
    <string name="button_cikar">-</string>
    <string name="button_topla">+</string>
    <string name="button_sonuc">=</string>
    <string name="button_nokta">.</string>
    <string name="button_degistir">+/-</string>

</resources>